feat: create a macro for the eFPGA_Config logic and use it in the top level design

--- a/openlane/user_project_wrapper/macro_placement.cfg
+++ b/openlane/user_project_wrapper/macro_placement.cfg
@@ -156,3 +156,4 @@ eFPGA_top_i.Inst_BlockRAM_3.memory_cell 2420.0 1552.0 N
 eFPGA_top_i.Inst_BlockRAM_2.memory_cell 2420.0 1099.0 N
 eFPGA_top_i.Inst_BlockRAM_1.memory_cell 2420.0 646.0 N
 eFPGA_top_i.Inst_BlockRAM_0.memory_cell 2420.0 193.0 N
+eFPGA_top_i.eFPGA_Config_inst 50.0 25.0 N
