fix: Fix BRAM LVS mismatches and use BRAM macro in the user project wrapper

--- a/openlane/BRAM/config.json
+++ b/openlane/BRAM/config.json
@@ -5,7 +5,7 @@
    "RUN_LINTER": 0,
    "MAX_FANOUT_CONSTRAINT": 5,
    "FP_SIZING": "absolute",
-   "DIE_AREA": "0 0 575 450",
+   "DIE_AREA": "0 0 550 440",
 
    "CLOCK_PERIOD": "40",
    "CLOCK_PORT": "clk",
@@ -30,11 +30,12 @@
    "TOP_MARGIN_MULT": 2,
    "BOTTOM_MARGIN_MULT": 2,
    "FP_IO_MODE": 0,
-   "FP_PIN_ORDER_CFG": ["dir::./pin_order.cfg"],
+   "FP_PIN_ORDER_CFG": ["dir::./pin_changed.cfg"],
    "FP_PDN_MACRO_HOOKS": ["memory_cell vccd1 vssd1 vccd1 vssd1"],
    "FP_PDN_MULTILAYER": 1,
    "GRT_ALLOW_CONGESTION": 1,
-
+   "RUN_MAGIC_DRC": 0,
+   
    "ROUTING_CORES": 12,
    "VDD_PINS": "vccd1",
    "GND_PINS": "vssd1",
@@ -42,15 +43,16 @@
    "GND_NETS": "vssd1",
    "FP_PDN_VOFFSET": 10,
    "FP_PDN_HOFFSET": 25,
-   "FP_PDN_VPITCH": 20,
+   "FP_PDN_VPITCH": 8,
    "FP_PDN_HPITCH": 380,
-   "FP_PDN_IRDROP": 0,
-   "FP_PDN_CHECK_NODES": 0,
+   "FP_PDN_IRDROP": 1,
+   "FP_PDN_CHECK_NODES": 1,
+   "LVS_CONNECT_BY_LABEL": 1,
    "MACRO_PLACEMENT_CFG": [ "dir::./macros/placements/macro_placement.cfg"],
-    "SYNTH_USE_PG_PINS_DEFINES": 1,
+    "SYNTH_USE_PG_PINS_DEFINES": "USE_POWER_PINS",
    "FP_PDN_ENABLE_GLOBAL_CONNECTIONS": 1,
    "FP_PDN_CFG": "dir::pdn_cfg.tcl",
-   "GRT_OBS": "met4 5 25 52 430",
+   "GRT_OBS": "met4 5 25 52 425",
 
    "VERILOG_FILES_BLACKBOX": [ "dir::./macros/verilog/sky130_sram_1kbyte_1rw1r_32x256_8.v"],
    "EXTRA_LEFS": [ "dir::./macros/lef/sky130_sram_1kbyte_1rw1r_32x256_8.lef"],
