--- a/openlane/RAM_IO/config.json
+++ b/openlane/RAM_IO/config.json
@@ -5,21 +5,21 @@
         "dir::src/*.v"
     ],
     "FP_SIZING": "absolute",
-    "DIE_AREA": "0 0 128.5 223.5",
+    "DIE_AREA": "0 0 110 223.5",
     "GRT_OBS":  "met5 0 0 128.5 223.5",
 
     "FP_IO_VEXTEND": 1.5,
    "FP_IO_HEXTEND": 1.5,
    
-    "SYNTH_MAX_FANOUT":5,
+    "MAX_FANOUT_CONSTRAINT":5,
      "CELL_PAD":4,
 
     "SYNTH_LATCH_MAP" :"dir::gate_map.v",
     
      "SYNTH_STRATEGY":"DELAY 0",
-     
-
-    "PL_TARGET_DENSITY": 0.63,
+     "GRT_ALLOW_CONGESTION": 1,
+   
+    "PL_TARGET_DENSITY": 0.80,
     "GLB_RESIZER_HOLD_SLACK_MARGIN":0.05,
     "GLB_RESIZER_SETUP_SLACK_MARGIN":0.5,
     "PL_RESIZER_SETUP_SLACK_MARGIN":0.5,
