--- a/openlane/RAM_IO/pin_order.cfg
+++ b/openlane/RAM_IO/pin_order.cfg
@@ -1,4 +1,5 @@
 #N
+@min_distance=0.5
 N1BEG\[.*
 N2BEG\[.*
 N2BEGb\[.*
@@ -11,6 +12,7 @@ UserCLKo
 FrameStrobe_O\[.*
 
 #S
+@min_distance=0.5
 N1END\[.*
 N2MID\[.*
 N2END\[.*
@@ -23,6 +25,7 @@ UserCLK
 FrameStrobe\[.*
 
 #E
+@min_distance=0.5
 RAM2FAB_D3_I0
 RAM2FAB_D3_I1
 RAM2FAB_D3_I2
@@ -74,6 +77,7 @@ FAB2RAM_D0_O3
 FrameData_O\[.*
 
 #W
+@min_distance=0.5
 W1BEG\[.*
 W2BEG\[.*
 W2BEGb\[.*
