--- a/lvs/user_project_wrapper/lvs_config.json
+++ b/lvs/user_project_wrapper/lvs_config.json
@@ -1,4 +1,15 @@
 {
+    "STD_CELL_LIBRARY": "sky130_fd_sc_hd",
+	
+    "SRAM_MACRO": "sky130_sram_1kbyte_1rw1r_32x256_8",
+	
+    "INCLUDE_CONFIGS": [
+	
+        "$LVS_ROOT/tech/$PDK/lvs_config.base.json",
+	
+        "$LVS_ROOT/tech/$PDK/lvs_config.sram.json"
+	
+    ],
 	"TOP_SOURCE": "user_project_wrapper",
 	"TOP_LAYOUT": "$TOP_SOURCE",
 	"EXTRACT_FLATGLOB": [
@@ -20,10 +31,11 @@
 	],
 	"LVS_SPICE_FILES": [
 		"$PDK_ROOT/$PDK/libs.ref/sky130_fd_sc_hd/spice/sky130_ef_sc_hd__decap_12.spice",
+		"$PDK_ROOT/$PDK/libs.ref/sky130_sram_macros/spice/sky130_sram_1kbyte_1rw1r_32x256_8.spice",
 		"$PDK_ROOT/$PDK/libs.ref/sky130_fd_sc_hd/spice/sky130_fd_sc_hd.spice"
 	],
 	"LVS_VERILOG_FILES": [
-		"$UPRJ_ROOT/verilog/gl/user_proj_example.v",
+		"$UPRJ_ROOT/verilog/gl/*.v",
 		"$UPRJ_ROOT/verilog/gl/$TOP_SOURCE.v"
 	],
 	"LAYOUT_FILE": "$UPRJ_ROOT/gds/$TOP_LAYOUT.gds"
